# yeetbox

./: .editorconfig  .gitignore  Cargo.toml  LICENSE.txt  README.md  remotefs.proto  server.dockerfile
yeetbox-cli/: Cargo.toml  build.rs
yeetbox-cli/src/: main.rs
yeetbox-server/: Cargo.toml  build.rs
yeetbox-server/src/: authn.rs  config.rs  grpc.rs  logging.rs  main.rs  service.rs  time64.rs  utils.rs
yeetbox-server/src/authz/: mod.rs  simple.rs
yeetbox-server/src/storage/: database.rs  file.rs  mod.rs
