[package]
name = "yeetbox-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "yeetbox-cli"
path = "src/main.rs"

[dependencies]
tonic = "0.9"
prost = "0.11"
prost-types = "0.11"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0.71"
# log4rs = "1.2.0"
# log = "0.4"
# rand = "0.8.5"
chrono = "0.4.26"
# warp = "0.3"
# yew = { version = "0.20.0", features = ["ssr"] }
# hex = "0.4.3"

[build-dependencies]
tonic-build = "0.9"
